--- a/16. IDS IPS.md
+++ b/16. IDS IPS.md
@@ -32,12 +32,105 @@ There are a lot of ways it operates in:
 
 ## IPS - Intrusion Prevention System
 
-Intrusion Prevention System operated like ID Systems however they will take action instead of just alerting the SIEM. It's 
+Intrusion Prevention System operated like ID Systems however they will take action instead of just alerting the SIEM. Basically they are a superset of of ID Systems, providing more functionality.
 
-## Network Instursion Prevention System
+### NIPS - Network Instursion Prevention System
+
+Sniffs the packets that flow through it and has the ability to stop the flow of certein packets if it detects any foul play, NIP Systems follow rules and policies that are set beforehand. The same ones that serve the ID Systems.
+
+### HIPS - Host Intrusion Prevention System
+
+Sniff that passes to the local machine, it has the ability to drop certein packets like ones that are flagged by the ruleset as malicious. Usually the HIPS will inspect the packets first, before the local firewall.
 
 ```diff
 - (Write a bit more there is not enough information here)
 + I wrote more.
 - (Where is the snort rule explantion?)
 ```
+## Snort - An IDS/IPS Product
+
+Snort is an IDS/IPS system (depending on how it is configured), Snort operates based on a rule set that has a very specific format:
+
+### Rule Types
+The basic rule is written as a line following this format:
+`action protocol/service src_ip src_port -> dst_ip dst_port (options)`
+
+There is also a **Service specific** rule that goes like:
+`action service (options)`
+
+Snort can process **Files** that are sent on the following services:
+* http, smtp, pop3, imap, smb & ftp
+The format goes like this:
+`action file (options)` (This rule will apply to all files)
+OR
+`action protocol(NOT SERVICE) src_ip src_Port -> dst_ip dst_port (options)` (This rule will apply to specific file transfers)
+
+Another rule type that takes advantage of the file processing capabilities of Snort is the **File Identification** rule type, it is used to label files based on traits it can discern from it's contents. These labels are then used in later rules.
+
+The format goes as follows:
+`file_id(options)`
+
+### Actions
+The first segment of the rule is the action that should be taken when a packet matching the rule is met, the types are:
+* **alert** - generates an alert.
+* **block** - block the current packet and all following packets in the flow.
+* **drop** - drop the current packet.
+* **log** - log the current packet.
+* **pass** - mark the current packet.
+* **react** - send response to the client and terminate the session.
+* **reject** - terminate the session with a TCP reset packet or an ICMP unreachable response.
+* **rewrite** - rewrites contents in the packet based on the "replace" option in the rule.
+
+### Protocol
+This segment tells the rule was protocol to look for. The supported ones in Snort3 are:
+* ip
+* icmp
+* tcp
+* udp
+
+There is also the options to list services, which are:
+* dns
+* ftp
+* http
+* sip
+* smtp
+* sql
+* ssh
+* telnet
+* ssl
+* S7
+* mms
+* DCE/RPC
+
+### IP addresses
+Could be written as:
+* "any"
+* a single string IP with the option of a CIDR block (10.0.0.1 / 10.0.0.0/24)
+* a variable from the snort.conf file ($HOME_NET)
+* an ip address list ([10.0.0.1,10.0.1.0/24,192.168.100.1])
+
+### Port Numbers
+Could be written as:
+* "any"
+* Static number (80)
+* variable from the conf file. ($HTTP_PORTS)
+* port range (1:1024)
+* List of static ports ([80,443,8000:9000,$HTTP_PORTS])
+Ports can be negated using the ! operator, and important to notice is that if a rule matches the service of the packet but not the port number the rule will still apply!
+
+### Direction Operators
+There are two valid operators:
+* `->` - Tells the system to look at packets where the src and dst ips match the ones on the packet.
+* `<>` - Tells the system that the src and dst ips and ports could be either on the sniffed packets.
+
+### Options
+The options of the rule are the main componenets of it, making the decision if to take the `action` rather than detecting the packet. Options are split into 4 categories:
+* General options
+* Payload options
+* Non-payload options
+* Post-detection options
+
+The options within these rules are linked to in the bullets but I will list some common ones:
+* **msg** - sets a message to be printed when the rule is matched.
+* **sid + rev** - **sid** sets an id for the rule so it can be easily identified. **rev** means revision, allowing easy management and editing of rules. Two rules can have the same sid as long as their revision is different. (Snort reserves all the sids up to 1000000)
+* **priority** - sets a priority value for use when prioritizing events.
