--- a/16. IDS IPS.md
+++ b/16. IDS IPS.md
@@ -125,12 +125,14 @@ There are two valid operators:
 
 ### Options
 The options of the rule are the main componenets of it, making the decision if to take the `action` rather than detecting the packet. Options are split into 4 categories:
-* General options
-* Payload options
-* Non-payload options
-* Post-detection options
+* [General](https://docs.snort.org/rules/options/general/index.html) options - For options that generaly interact with the rule.
+* [Payload](https://docs.snort.org/rules/options/payload/index.html) options - For options that can interact with the payload of the packet.
+* [Non-payload](https://docs.snort.org/rules/options/non_payload/index.html) options - For options that interact with the header of the packet.
+* [Post-detection](https://docs.snort.org/rules/options/post/index.html) options - For options that tirgger after a rule is fired, the "replace" option (for the "rewrite" `action`) is listed here.
 
-The options within these rules are linked to in the bullets but I will list some common ones:
+The options within these rules are linked to in the bullets but I will list some:
 * **msg** - sets a message to be printed when the rule is matched.
 * **sid + rev** - **sid** sets an id for the rule so it can be easily identified. **rev** means revision, allowing easy management and editing of rules. Two rules can have the same sid as long as their revision is different. (Snort reserves all the sids up to 1000000)
 * **priority** - sets a priority value for use when prioritizing events.
+* **http_uri** - Used to check the the uri in an http header.
+* **content** - Used to match the content of a header field/file/packet. (options like "http_uri" will be used in conjuction with "content" to check those fields)
