--- a/20. Final Mission - Medium Network.md
+++ b/20. Final Mission - Medium Network.md
@@ -1,59 +1,18 @@
-![This is my medium network :)](/Pictures/Final_Mission/Medium_Network.PNG)
+![This is my medium network :)](/Pictures/Final_Mission/MediumNetworkNew.png)
 
 # MEDIUM (SOMEWHAT SECURE) NETWORK
 
 This is my medium (somewhat secure) Network, so what is it made up of:
+ 
+**Servers**: Mail, DNS, DHCP, Web, SQL, Files, Domain Controller.
+**Security/Management systems**: Siem (Arcsight), SNMP, McAfee EPO, Snort, Workstations.
+**Workstations**: 6 Linux, 6 Windows.
+**DMZ Servers**: Files, Web, DNS, NTP.
 
-> **Servers Segment**
->
-> * DNS + Domain Controller Server
-> * DHCP Server
-> * File Server (SMB)
-> * Web Server
 
-> **Users Segment**
->
-> * Windows-PC1
-> * Windows-PC2
-> * Windows-PC3
-> * Linux-PC4
-> * Linux-PC5
-> * Linux-PC6
-> * SQL Server
-
-> **DMZ**
->
-> * Web Server
-> * Database
-
-> **Firewalls**
-> * Primary Firewall
-> * Secondary Firewall
-
-> **SCADA**
-> * SCADA Server + Interface + DB
-> * PLC + Sprinklers + Smoke Detector
-> * PLC + Sprinklers + Smoke Detector
-
-> **Administrator Segment**
-> * Administrator-PC1
-> * Administrator-PC2
-> * Administrator-PC3
-
-Okay let's get into it, obvously there are a few fuck up in this network. Some are planned for and some are there because I don't really know how to plan a network :) What are they? Here's a banging list:
-
-1. **Firewalls**
-    
-    This network has 3 firewalls. One is in the SCADA segment for security reasons, attackers will wants to target your scada server and equipment in order to create physical damage. And two others maintain the routing and filtering between segments, One being the central one and the other begin a load balancer (Assuming there is a lot of traffic in the network).
-
-    BUT, there is one firewall missing. A firewalls is needed to seperate the DMZ and the rest of the network from the web. With the current architechture, the firewall for the entre domain is also the one used to route to the DMZ. This can pose a threat to the network.
-
-2. **Segmentation**
-    
-    Overall the segmentation in this network is good, The segments each play a different role. SCADA has their own FW, Servers are in the own segment and Administrators have their own segment. Each with their own private IP, only the DMZ using public IPs. But there is a single problem, The domain's database is located in the user's segment. Assuming one of the user's CP falls under an attack it will not be hard to get a hold of the DB.
-    
     
 ```diff
 - (There are things missing from the network such as SIEM an IDS/IPS...)
++ I added them.
 - (There is more to the network in terms of secure and not secure, one example is the DC should be in its own segment please sit and look at it again and make two colums for secure and not secure and fill them again pay more attention this time)
 ```
