--- a/20. Final Mission - Medium Network.md
+++ b/20. Final Mission - Medium Network.md
@@ -1,12 +1,12 @@
-![This is my medium network :)](/Pictures/Final_Mission/MediumNetworkNew.png)
+![This is my medium network :)](/Pictures/Final_Mission/MediumNetworkNew2.png)
 
 # MEDIUM (SOMEWHAT SECURE) NETWORK
 
 This is my medium (somewhat secure) Network, so what is it made up of:
  
-**Servers**: Mail, DNS, DHCP, Web, SQL, Files, Domain Controller.
-**Security/Management systems**: Siem (Arcsight), SNMP, McAfee EPO, Snort, Workstations.
-**Workstations**: 6 Linux, 6 Windows.
+**Servers**: Mail, DNS, DHCP, Web, SQL, Files, Domain Controller.<br>
+**Security/Management systems**: Siem (Arcsight), SNMP, McAfee EPO, Snort, Workstations.<br>
+**Workstations**: 6 Linux, 6 Windows.<br>
 **DMZ Servers**: Files, Web, DNS, NTP.
 
 
