--- a/20. Final Mission - Medium Network.md
+++ b/20. Final Mission - Medium Network.md
@@ -9,7 +9,14 @@ This is my medium (somewhat secure) Network, so what is it made up of:
 **Workstations**: 6 Linux, 6 Windows.<br>
 **DMZ Servers**: Files, Web, DNS, NTP.
 
-
+| Secure                                                                                	| Unsecure                                                                                                    	|
+|---------------------------------------------------------------------------------------	|-------------------------------------------------------------------------------------------------------------	|
+| The only access to the network through the internet is possible through a VPN server. 	| The DC is put in a segment with servers that could be vulnurable.                                           	|
+| The network has a SIEM deployed, McAfee EPO server and a Snort IPS on the FW.         	| Some segments are connected using switches and not routers. Making them valnurable to some layer 2 attacks. 	|
+| There is a separate segment for management workstations.                              	| There is a snort IPS on the central FW of the network, making it susceptible to denial of service attacks.  	|
+| The network is split into segments which allow better managemnt of ACLs on the FW.    	|                                                                                                             	|
+|                                                                                       	|                                                                                                             	|
+|                                                                                       	|                                                                                                             	|
     
 ```diff
 - (There are things missing from the network such as SIEM an IDS/IPS...)
