--- a/18. Network address translation.md
+++ b/18. Network address translation.md
@@ -18,20 +18,17 @@ The main goal is to translate a private IP address to a public IP address. Intro
 
 There are multiple ways to translate addresses:
 
-> **NAT Overload / PAT**
+> **Static NAT**
 >
-> This translation method is the most used, in it multiple private IP addresses are translated to a single public address on the router.
-> The distinction between the connections is made by using the port numbers, since there are a lot of port numbers.
+> In this translation the network administrator has to set the NAT tables by hand, mapping which address translates to which address including tcp ports.<br>
+> This method will be used for machines that have a static IP and need to be accessed from outside the network using a single consistent IP, like web servers.
 
 > **Dynamic NAT**
 >
-> In this translation, the router will have a pool of more than one public addresses (which have to be bought). Afterwards, the router will translate one private IP address to one public IP address until all IP addresses in the pool are used. When there are no IPs left to use the local machines will have to wait for an address to become free.
+> In this translation, the router will have a pool of more than one public addresses (which have to be bought). Afterwards, the router will translate one private IP address to one public IP address until all IP addresses in the pool are used. When there are no IPs left to use the local machines will have to wait for an address to become free.<br>
+> This method will be used when we have a set of machines that we know how many of them need to be connected to the internet at a certein point in time.
 
-> **Static NAT**
->
-> In this translation the network administrator has to set the NAT tables by hand, mapping which address translates to which address including tcp ports.
-
-> **Static PAT / Port Forwarding**
+> **Static PAT / Port Forwarding / NAT Overload**
 >
 > In this translation, a singe public IP address is translated to a single private IP address however specific IP and port combinations can be translated to other specific private IP and port combinations. Like:
 > 
@@ -39,17 +36,28 @@ There are multiple ways to translate addresses:
 > | ----                        | ----                          |
 > | 10.0.1.1                    | 192.168.142.22                |
 > | 10.0.1.25:80                | 192.168.142.22:80             |
+>
+> This method is used when there are a big amount of machines and we want to allow them all access to the internet using only a single IP address. It is a really popular method for NAT because it is conservative.
 
 ```diff
 - (When would you use each one of the methode of NAT?)
++ Static - will be used for machines that have a static IP and need to be accessed from outside the network using a single consistent IP, like web servers.
++ Dynamic - will be used when we have a set of machines that we know how many of them need to be connected to the internet at a certein point in time.
++ PAT - is used when there are a big amount of machines and we want to allow them all access to the internet using only a single IP address.
 ```
 
 ## Encouters with NAT in the wild
 
-As attackers we will sometimes wants to perform some actions on a network from the outside, maybe because we still have not gained access to it. In that case we will have to use it's public IP/IPs in order to interact with it, so what do we do? Since those addresses don't necessarily map to a single machine we wil perform a port scan on that address. See what possible attack vectors that address allows.
+Today the use of NAT is widespread due to the need of IP address conservation. As attackers on the internet we will only have access to the public addresses of the networks we will want to attack, which will most likely not have sensitive information on the other side. So how do we access the private network?
 
-From then we will act upon the findings or perform some more recon based on them.
+1. **Slipstream attack**
+> In 2020 a valnurability was found in the interpretation of the ALG layer of TCP packets on routers. The weakness allowed attackers to access any service on the victim machine if he connected to them on http to port 5060.<br>
+> Later a new variant of this attack was found that allowed the access of any service on **any machine** in the private network through the slipstreaming.
+
+2. **EtherOops**
+A valnurability found on weak ethernet cables that allows sending packets in packet than when error-handled get treated as brand new packets. 
 
 ```diff
 - (How will the port scan help? Try again)
++ Added 2 attacks.
 ```
